# EmojiExtractor

./: .gitignore  Emoji extractor.ipynb  README.md  pyproject.toml  requirements.txt
